stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0074_if_complex_branches.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0074_if_complex_branches.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
3
stderr:
<empty>
