stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0079_if_string_result.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0079_if_string_result.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
on
stderr:
<empty>
