stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0123_tuple_mixed_types.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0123_tuple_mixed_types.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
(1, hello, true)
stderr:
<empty>
