stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0125_tuple_with_expr.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0125_tuple_with_expr.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
(3, 12)
stderr:
<empty>
