stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0132_list_one.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0132_list_one.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
[1]
stderr:
<empty>
