stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0134_list_strings.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0134_list_strings.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
[a, b, c]
stderr:
<empty>
