stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0135_list_nested.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0135_list_nested.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
[[1, 2], [3, 4]]
stderr:
<empty>
