stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0206_record_with_expr.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0206_record_with_expr.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
Point { x: 3, y: 3 }
stderr:
<empty>
