stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0208_record_nested_access.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0208_record_nested_access.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
7
stderr:
<empty>
