stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0212_record_in_tuple.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0212_record_in_tuple.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
(Point { x: 1 }, Point { y: 2 })
stderr:
<empty>
